[gd_scene load_steps=3 format=3 uid="uid://dsc6jyh7h2jt7"]

[ext_resource type="Script" uid="uid://028iyqasoi07" path="res://wonder_weapon_purchase_area.gd" id="1_87yx7"]

[sub_resource type="CircleShape2D" id="CircleShape2D_3b0mn"]
radius = 87.0057

[node name="WonderWeaponPurchaseArea" type="Area2D"]
script = ExtResource("1_87yx7")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PromtLabel" type="Label" parent="CanvasLayer"]
offset_left = 715.0
offset_top = 435.0
offset_right = 755.0
offset_bottom = 462.0
metadata/_edit_use_anchors_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_3b0mn")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
